# TheIntercom

./: Application_Summary.txt  CMakeLists.txt  Kconfig.projbuild  MY_NOTES.txt  MY_README.md  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_hf_msg_prs.c  app_hf_msg_set.c  bluetooth_config.h  bt_app_core.c  bt_app_hf.c  gpio_pcm_config.c  main.c  phil_config.h
main/components/: btc_hf_client.c
